--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ more-itertools==8.10.0
 oauthlib==3.2.0
 Pillow==9.5.0
 psycopg2-binary==2.9.6
+pycodestyle==2.10.0
 Pygments==2.11.2
 PyGObject==3.42.1
 PyJWT==2.3.0
